versioned_docs/version-3.17/components/_getting-started-setup-storage.mdx
import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';
import CodeBlock from '@theme/CodeBlock';
import Admonition from '@theme/Admonition';

{/*
  Reusable storage setup tabs for "Set up a database" sections.

  The UI uses two-level nested tabs:
    - Outer tabs (groupId="storage-category") pick a category:
        "Relational databases" | "NewSQL databases" | "NoSQL databases" | "Object storage"
    - Inner tabs (groupId="databases") pick a specific storage in that category,
      listed in alphabetical order.

  Props:
    - mode: "core-java" | "core-kotlin" | "cluster"
        Switches properties filename, "Configure ScalarDB" vs "Configure ScalarDB Cluster",
        host names in JDBC URLs, and the samples directory under scalardb-samples/.
        Also controls which mode-specific storage tabs are shown: SQLite is core-only 
        (because it is not recommended for use with ScalarDB Cluster),
        Object Storage is cluster-only (because object storages do not support a secondary index and
        the ScalarDB sample uses a secondary index for some of its commands)
*/}

export const samplesDir = (props) => {
  switch (props.mode) {
    case 'cluster':
      return 'scalardb-cluster-standalone-mode';
    case 'core-kotlin':
      return 'scalardb-kotlin-sample';
    case 'core-java':
      return 'scalardb-sample';
    default:
      throw new Error(
        `<StorageSetupTabs> requires a "mode" prop set to one of: "core-java", "core-kotlin", "cluster". Received: ${JSON.stringify(props.mode)}`
      );
  }
};

export const propertiesFile = (props) =>
  props.mode === 'cluster' ? 'scalardb-cluster-node.properties' : 'database.properties';

export const configureHeading = (props) =>
  props.mode === 'cluster' ? 'Configure ScalarDB Cluster' : 'Configure ScalarDB';

export const host = (props, service) =>
  props.mode === 'cluster' ? `${service}-1` : 'localhost';

export const dedent = (strings, ...values) => {
  // Strips the shared leading indentation (and surrounding blank lines) from a
  // code block, so the source can be indented to match the surrounding JSX
  // while the rendered output stays flush-left.
  const raw = strings.reduce(
    (acc, str, i) => acc + (i ? values[i - 1] : '') + str,
    ''
  );
  const lines = raw.replace(/^\n/, '').replace(/\n[ \t]*$/, '').split('\n');
  const min = Math.min(
    ...lines.filter((l) => l.trim()).map((l) => l.match(/^[ \t]*/)[0].length)
  );
  return lines.map((l) => l.slice(min)).join('\n');
};

<Tabs groupId="storage-category" queryString>
  <TabItem value="relational" label="Relational databases" default>
    Select your relational database.
    <Tabs groupId="databases" queryString>
      <TabItem value="Db2" label="Db2" default>
        <h3>Run Db2 locally</h3>

        You can run IBM Db2 in Docker Compose by using the <code>docker-compose.yml</code> file in the <code>scalardb-samples/{samplesDir(props)}</code> directory.

        To start IBM Db2, run the following command:

        <CodeBlock language="console">docker compose up -d db2</CodeBlock>

        <h3>{configureHeading(props)}</h3>

        The <strong>{propertiesFile(props)}</strong> file in the <code>scalardb-samples/{samplesDir(props)}</code> directory contains database configurations. Please uncomment the properties for Db2 in the <strong>{propertiesFile(props)}</strong> file so that the configuration looks as follows:

        <CodeBlock language="properties">{dedent`
          # For Db2
          scalar.db.storage=jdbc
          scalar.db.contact_points=jdbc:db2://${host(props, 'db2')}:50000/sample
          scalar.db.username=db2inst1
          scalar.db.password=db2inst1
        `}</CodeBlock>
      </TabItem>

      <TabItem value="MariaDB" label="MariaDB">
        <h3>Run MariaDB locally</h3>

        You can run MariaDB in Docker Compose by using the <code>docker-compose.yml</code> file in the <code>scalardb-samples/{samplesDir(props)}</code> directory.

        To start MariaDB, run the following command:

        <CodeBlock language="console">docker compose up -d mariadb</CodeBlock>

        <h3>{configureHeading(props)}</h3>

        The <strong>{propertiesFile(props)}</strong> file in the <code>scalardb-samples/{samplesDir(props)}</code> directory contains database configurations. Please uncomment the properties for MariaDB in the <strong>{propertiesFile(props)}</strong> file so that the configuration looks as follows:

        <CodeBlock language="properties">{dedent`
          # For MariaDB
          scalar.db.storage=jdbc
          scalar.db.contact_points=jdbc:mariadb://${host(props, 'mariadb')}:3306
          scalar.db.username=root
          scalar.db.password=mariadb
        `}</CodeBlock>
      </TabItem>

      <TabItem value="MySQL" label="MySQL">
        <h3>Run MySQL locally</h3>

        You can run MySQL in Docker Compose by using the <code>docker-compose.yml</code> file in the <code>scalardb-samples/{samplesDir(props)}</code> directory.

        To start MySQL, run the following command:

        <CodeBlock language="console">docker compose up -d mysql</CodeBlock>

        <h3>{configureHeading(props)}</h3>

        The <strong>{propertiesFile(props)}</strong> file in the <code>scalardb-samples/{samplesDir(props)}</code> directory contains database configurations. Please uncomment the properties for MySQL in the <strong>{propertiesFile(props)}</strong> file so that the configuration looks as follows:

        <CodeBlock language="properties">{dedent`
          # For MySQL
          scalar.db.storage=jdbc
          scalar.db.contact_points=jdbc:mysql://${host(props, 'mysql')}:3306/
          scalar.db.username=root
          scalar.db.password=mysql
        `}</CodeBlock>
      </TabItem>

      <TabItem value="Oracle Database" label="Oracle Database">
        <h3>Run Oracle Database locally</h3>

        You can run Oracle Database in Docker Compose by using the <code>docker-compose.yml</code> file in the <code>scalardb-samples/{samplesDir(props)}</code> directory.

        To start Oracle Database, run the following command:

        <CodeBlock language="console">docker compose up -d oracle</CodeBlock>

        <h3>{configureHeading(props)}</h3>

        The <strong>{propertiesFile(props)}</strong> file in the <code>scalardb-samples/{samplesDir(props)}</code> directory contains database configurations. Please uncomment the properties for Oracle Database in the <strong>{propertiesFile(props)}</strong> file so that the configuration looks as follows:

        <CodeBlock language="properties">{dedent`
          # For Oracle
          scalar.db.storage=jdbc
          scalar.db.contact_points=jdbc:oracle:thin:@//${host(props, 'oracle')}:1521/FREEPDB1
          scalar.db.username=SYSTEM
          scalar.db.password=Oracle
        `}</CodeBlock>
      </TabItem>

      <TabItem value="PostgreSQL" label="PostgreSQL">
        <h3>Run PostgreSQL locally</h3>

        You can run PostgreSQL in Docker Compose by using the <code>docker-compose.yml</code> file in the <code>scalardb-samples/{samplesDir(props)}</code> directory.

        To start PostgreSQL, run the following command:

        <CodeBlock language="console">docker compose up -d postgres</CodeBlock>

        <h3>{configureHeading(props)}</h3>

        The <strong>{propertiesFile(props)}</strong> file in the <code>scalardb-samples/{samplesDir(props)}</code> directory contains database configurations. Please uncomment the properties for PostgreSQL in the <strong>{propertiesFile(props)}</strong> file so that the configuration looks as follows:

        <CodeBlock language="properties">{dedent`
          # For PostgreSQL
          scalar.db.storage=jdbc
          scalar.db.contact_points=jdbc:postgresql://${host(props, 'postgres')}:5432/
          scalar.db.username=postgres
          scalar.db.password=postgres
        `}</CodeBlock>
      </TabItem>

      <TabItem value="SQL Server" label="SQL Server">
        <h3>Run SQL Server locally</h3>

        You can run SQL Server in Docker Compose by using the <code>docker-compose.yml</code> file in the <code>scalardb-samples/{samplesDir(props)}</code> directory.

        To start SQL Server, run the following command:

        <CodeBlock language="console">docker compose up -d sqlserver</CodeBlock>

        <h3>{configureHeading(props)}</h3>

        The <strong>{propertiesFile(props)}</strong> file in the <code>scalardb-samples/{samplesDir(props)}</code> directory contains database configurations. Please uncomment the properties for SQL Server in the <strong>{propertiesFile(props)}</strong> file so that the configuration looks as follows:

        <CodeBlock language="properties">{dedent`
          # For SQL Server
          scalar.db.storage=jdbc
          scalar.db.contact_points=jdbc:sqlserver://${host(props, 'sqlserver')}:1433;encrypt=true;trustServerCertificate=true
          scalar.db.username=sa
          scalar.db.password=SqlServer22
        `}</CodeBlock>
      </TabItem>

      {props.mode !== 'cluster' && (
        <TabItem value="SQLite" label="SQLite">
          <h3>{configureHeading(props)}</h3>

          SQLite is an embedded, file-based database, so there is no separate server to start. ScalarDB creates the database file automatically when it is first used.

          The <strong>{propertiesFile(props)}</strong> file in the <code>scalardb-samples/{samplesDir(props)}</code> directory contains database configurations. Please uncomment the properties for SQLite in the <strong>{propertiesFile(props)}</strong> file so that the configuration looks as follows:

          <CodeBlock language="properties">{dedent`
            # For Sqlite
            scalar.db.storage=jdbc
            scalar.db.contact_points=jdbc:sqlite:scalardb-sample.sqlite3?busy_timeout=10000&journal_mode=WAL
            scalar.db.username=
            scalar.db.password=
          `}</CodeBlock>
        </TabItem>
      )}
    </Tabs>
  </TabItem>

  <TabItem value="newsql" label="NewSQL databases">
    Select your NewSQL database.
    <Tabs groupId="databases" queryString>
      <TabItem value="AlloyDB" label="AlloyDB" default>
        <h3>Run AlloyDB locally</h3>

        You can run AlloyDB Omni in Docker Compose by using the <code>docker-compose.yml</code> file in the <code>scalardb-samples/{samplesDir(props)}</code> directory.

        To start AlloyDB Omni, run the following command:

        <CodeBlock language="console">docker compose up -d alloydb</CodeBlock>

        <h3>{configureHeading(props)}</h3>

        The <strong>{propertiesFile(props)}</strong> file in the <code>scalardb-samples/{samplesDir(props)}</code> directory contains database configurations. Please uncomment the properties for AlloyDB in the <strong>{propertiesFile(props)}</strong> file so that the configuration looks as follows:

        <CodeBlock language="properties">{dedent`
          # For AlloyDB
          scalar.db.storage=jdbc
          scalar.db.contact_points=jdbc:postgresql://${host(props, 'alloydb')}:5432/
          scalar.db.username=postgres
          scalar.db.password=postgres
        `}</CodeBlock>
      </TabItem>

      <TabItem value="TiDB" label="TiDB">
        <h3>Run TiDB locally</h3>

        You can run TiDB locally by using the TiUP tool. For installation instructions, see [Install TiUP](https://docs.pingcap.com/tidb/stable/tiup-overview/#install-tiup).

        To start TiDB, run the following command:

        <CodeBlock language="console">tiup playground v8.5 --without-monitor</CodeBlock>

        <h3>{configureHeading(props)}</h3>

        The <strong>{propertiesFile(props)}</strong> file in the <code>scalardb-samples/{samplesDir(props)}</code> directory contains database configurations. Please uncomment the properties for TiDB in the <strong>{propertiesFile(props)}</strong> file so that the configuration looks as follows:

        <CodeBlock language="properties">{dedent`
          # For TiDB
          scalar.db.storage=jdbc
          scalar.db.contact_points=jdbc:mysql://${props.mode === 'cluster' ? 'host.docker.internal' : 'localhost'}:4000/
          scalar.db.username=root
          scalar.db.password=
        `}</CodeBlock>
      </TabItem>

      <TabItem value="YugabyteDB" label="YugabyteDB">
        <h3>Run YugabyteDB locally</h3>

        You can run YugabyteDB in Docker Compose by using the <code>docker-compose.yml</code> file in the <code>scalardb-samples/{samplesDir(props)}</code> directory.

        To start YugabyteDB, run the following command:

        <CodeBlock language="console">docker compose up -d yugabyte</CodeBlock>

        <h3>{configureHeading(props)}</h3>

        The <strong>{propertiesFile(props)}</strong> file in the <code>scalardb-samples/{samplesDir(props)}</code> directory contains database configurations. Please uncomment the properties for YugabyteDB in the <strong>{propertiesFile(props)}</strong> file so that the configuration looks as follows:

        <CodeBlock language="properties">{dedent`
          # For Yugabyte
          scalar.db.storage=jdbc
          scalar.db.contact_points=jdbc:yugabytedb://${host(props, 'yugabyte')}:5433/postgres
          scalar.db.username=yugabyte
          scalar.db.password=yugabyte
        `}</CodeBlock>
      </TabItem>
    </Tabs>
  </TabItem>

  <TabItem value="nosql" label="NoSQL databases">
    Select your NoSQL database.
    <Tabs groupId="databases" queryString>
      <TabItem value="Cassandra" label="Cassandra" default>
        <h3>Run Cassandra locally</h3>

        You can run Apache Cassandra in Docker Compose by using the <code>docker-compose.yml</code> file in the <code>scalardb-samples/{samplesDir(props)}</code> directory.

        To start Apache Cassandra, run the following command:

        <CodeBlock language="console">docker compose up -d cassandra</CodeBlock>

        <h3>{configureHeading(props)}</h3>

        The <strong>{propertiesFile(props)}</strong> file in the <code>scalardb-samples/{samplesDir(props)}</code> directory contains database configurations. Please uncomment the properties for Cassandra in the <strong>{propertiesFile(props)}</strong> file so that the configuration looks as follows:

        <CodeBlock language="properties">{dedent`
          # For Cassandra
          scalar.db.storage=cassandra
          scalar.db.contact_points=${host(props, 'cassandra')}
          scalar.db.username=cassandra
          scalar.db.password=cassandra
        `}</CodeBlock>
      </TabItem>

      <TabItem value="Cosmos_DB_for_NoSQL" label="Cosmos DB for NoSQL">
        To use Azure Cosmos DB for NoSQL, you must have an Azure account. If you don't have an Azure account, visit [Create an Azure Cosmos DB account](https://learn.microsoft.com/en-us/azure/cosmos-db/nosql/quickstart-portal#create-account).

        <h3>Configure Cosmos DB for NoSQL</h3>

        Set the **default consistency level** to **Strong** according to the official document at [Configure the default consistency level](https://learn.microsoft.com/en-us/azure/cosmos-db/nosql/how-to-manage-consistency#configure-the-default-consistency-level).

        <h3>{configureHeading(props)}</h3>

        The <strong>{propertiesFile(props)}</strong> file in the <code>scalardb-samples/{samplesDir(props)}</code> directory contains database configurations. Be sure to change the values for <code>scalar.db.contact_points</code> and <code>scalar.db.password</code> as described.

        <CodeBlock language="properties">{dedent`
          # For Cosmos DB
          scalar.db.storage=cosmos
          scalar.db.contact_points=<COSMOS_DB_FOR_NOSQL_URI>
          scalar.db.password=<COSMOS_DB_FOR_NOSQL_KEY>
        `}</CodeBlock>

        <Admonition type="note">
          You can use the primary key or the secondary key in your Azure Cosmos DB account as the value for <code>scalar.db.password</code>.
        </Admonition>
      </TabItem>

      <TabItem value="DynamoDB" label="DynamoDB">
        <h3>Run Amazon DynamoDB Local</h3>

        You can run Amazon DynamoDB Local in Docker Compose by using the <code>docker-compose.yml</code> file in the <code>scalardb-samples/{samplesDir(props)}</code> directory.

        To start Amazon DynamoDB Local, run the following command:

        <CodeBlock language="console">docker compose up -d dynamodb</CodeBlock>

        <h3>{configureHeading(props)}</h3>

        The <strong>{propertiesFile(props)}</strong> file in the <code>scalardb-samples/{samplesDir(props)}</code> directory contains database configurations. Please uncomment the properties for Amazon DynamoDB Local in the <strong>{propertiesFile(props)}</strong> file so that the configuration looks as follows:

        <CodeBlock language="properties">{dedent`
          # For DynamoDB Local
          scalar.db.storage=dynamo
          scalar.db.contact_points=sample
          scalar.db.username=sample
          scalar.db.password=sample
          scalar.db.dynamo.endpoint_override=http://${host(props, 'dynamodb')}:8000
        `}</CodeBlock>
      </TabItem>
    </Tabs>
  </TabItem>

  {props.mode === 'cluster' && (
    <TabItem value="object" label="Object storage">
      Select your object storage.
      <Tabs groupId="databases" queryString>
        <TabItem value="Blob_Storage" label="Blob Storage" default>
          <h3>Run Azurite</h3>

          You can run Azurite, which is a local emulator for Blob Storage, in Docker Compose by using the <code>docker-compose.yml</code> file in the <code>scalardb-samples/{samplesDir(props)}</code> directory.

          To start Blob Storage, run the following command:

          <CodeBlock language="console">docker compose up -d blobstorage</CodeBlock>

          Then, create a container named <code>test-container</code> by running the following command:

          <CodeBlock language="console">docker compose up blobstorage-container-creator</CodeBlock>

          <h3>{configureHeading(props)}</h3>

          The <strong>{propertiesFile(props)}</strong> file in the <code>scalardb-samples/{samplesDir(props)}</code> directory contains database configurations. Please uncomment the properties for Blob Storage in the <strong>{propertiesFile(props)}</strong> file so that the configuration looks as follows:

          <CodeBlock language="properties">{dedent`
            # For Blob Storage
            scalar.db.storage=blob-storage
            scalar.db.contact_points=http://${host(props, 'blobstorage')}:10000/test/test-container
            scalar.db.username=test
            scalar.db.password=test
          `}</CodeBlock>
        </TabItem>

        <TabItem value="Cloud_Storage" label="Cloud Storage">
          <p>To use Google Cloud Storage, you must have a Google Cloud account. If you don't have a Google Cloud account, visit <a href="https://cloud.google.com/docs/get-started">Get started with Google Cloud</a>.</p>

          <h3>Configure Cloud Storage</h3>

          <p>Create a Cloud Storage bucket. For instructions on creating a bucket, see <a href="https://cloud.google.com/storage/docs/creating-buckets">Create buckets</a>. You also need a service account key for authentication. For details, see <a href="https://cloud.google.com/iam/docs/keys-create-delete#creating">Create a service account key</a>.</p>

          <h3>{configureHeading(props)}</h3>

          <p>The <strong>{propertiesFile(props)}</strong> file in the <code>scalardb-samples/{samplesDir(props)}</code> directory contains database configurations. Be sure to change the values for <code>scalar.db.contact_points</code>, <code>scalar.db.username</code>, and <code>scalar.db.password</code> as described.</p>

          <CodeBlock language="properties">{dedent`
            # For Cloud Storage
            scalar.db.storage=cloud-storage
            scalar.db.contact_points=<CLOUD_STORAGE_BUCKET_NAME>
            scalar.db.username=<GCP_PROJECT_ID>
            scalar.db.password=<GCP_SERVICE_ACCOUNT_KEY_JSON>
          `}</CodeBlock>

          <Admonition type="note">
            Set <code>scalar.db.password</code> to the full content of your Google Cloud service account key file as a single-line JSON.
          </Admonition>
        </TabItem>

        <TabItem value="S3" label="S3">
          <p>To use Amazon S3, you must have an AWS account. If you don't have an AWS account, visit <a href="https://aws.amazon.com/free/">Create an AWS account</a>.</p>

          <h3>Configure Amazon S3</h3>

          <p>Create an S3 bucket. For instructions on creating a bucket, see <a href="https://docs.aws.amazon.com/AmazonS3/latest/userguide/create-bucket-overview.html">Creating a bucket</a>. You also need an access key for authentication. For details, see <a href="https://docs.aws.amazon.com/IAM/latest/UserGuide/id_credentials_access-keys.html#Using_CreateAccessKey">Creating access keys</a>.</p>

          <h3>{configureHeading(props)}</h3>

          <p>The <strong>{propertiesFile(props)}</strong> file in the <code>scalardb-samples/{samplesDir(props)}</code> directory contains database configurations. Be sure to change the values for <code>scalar.db.contact_points</code>, <code>scalar.db.username</code>, and <code>scalar.db.password</code> as described.</p>

          <CodeBlock language="properties">{dedent`
            # For S3
            scalar.db.storage=s3
            scalar.db.contact_points=<REGION>/<S3_BUCKET_NAME>
            scalar.db.username=<AWS_ACCESS_KEY>
            scalar.db.password=<AWS_SECRET_ACCESS_KEY>
          `}</CodeBlock>

          <Admonition type="note">
            The format of <code>scalar.db.contact_points</code> is <code>&lt;REGION&gt;/&lt;S3_BUCKET_NAME&gt;</code> (for example, <code>us-east-1/my-bucket</code>).
          </Admonition>
        </TabItem>
      </Tabs>
    </TabItem>
  )}
</Tabs>
